# tiralabra

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  readme.md
.github/workflows/: test-and-coverage-linux.yaml
docs/: implementationreport.md  specifications.md  testingreport.md  userguide.md
docs/weeklyreports/: weeklyreport1.md  weeklyreport2.md  weeklyreport3.md  weeklyreport4.md  weeklyreport5.md  weeklyreport6.md
src/: CMakeLists.txt  bitio.cpp  bitio.h  cc.cpp  cc.h  compress.cpp  huffman.cpp  huffman.h  lz78.cpp  lz78.h  main.cpp
src/huffman/: huffman.cpp  huffman.h
src/lz78/: lz78.cpp  lz78.h
src/utils/: bitio.cpp  bitio.h  getopt.h  robin_hood.h
tests/: CMakeLists.txt  big_test.txt  cc_test.cpp  compress_test.cpp  huffman_test.cpp  lz78_test.cpp  test.txt
tests/efficiencytesting/: efficiency_tests.py
